# armordeck

./: .gitignore  .gitmodules  LICENSE.md  README.md
esp32/: CMakeLists.txt  partitions.csv  sdkconfig
esp32/main/: CMakeLists.txt  display.c  display.h  doom.c  doom.h  main.c
esp32/main/_/: main.c
esp32/main/doom/: am_map.c  am_map.h  d_event.c  d_event.h  d_items.c  d_items.h  d_iwad.c  d_loop.c  d_loop.h  d_main.c  d_mode.c  d_net.c  d_player.h  d_think.h  d_ticcmd.h  doomdef.h  doomfeatures.h  doomgeneric.c  doomgeneric.h  doomstat.c  doomstat.h  doomtype.h  dstrings.c  dstrings.h  f_finale.c  f_wipe.c  g_game.c  gusconf.c  hu_lib.c  hu_lib.h  hu_stuff.c  hu_stuff.h  i_input.c  i_joystick.c  i_joystick.h  i_main.c  i_sound.c  i_swap.h  i_system.c  i_timer.c  (+68 more)
hw/: LICENSE.md  bottom.stl  button.stl  case.blend  top.stl
simulator/: kfile.js
simulator/Sources/: main.c
